tests/baselines/reference/typeGuardsInProperties.errors.txt
tests/cases/conformance/expressions/typeGuards/typeGuardsInProperties.ts(14,9): error TS2322: Type 'string | false' is not assignable to type 'string | number'.
  Type 'false' is not assignable to type 'string | number'.
tests/cases/conformance/expressions/typeGuards/typeGuardsInProperties.ts(15,9): error TS2322: Type 'string | false' is not assignable to type 'string | number'.
  Type 'false' is not assignable to type 'string | number'.
tests/cases/conformance/expressions/typeGuards/typeGuardsInProperties.ts(16,9): error TS2322: Type 'string | false' is not assignable to type 'string | number'.
  Type 'false' is not assignable to type 'string | number'.
tests/cases/conformance/expressions/typeGuards/typeGuardsInProperties.ts(20,1): error TS2322: Type 'string | false' is not assignable to type 'string | number'.
  Type 'false' is not assignable to type 'string | number'.
tests/cases/conformance/expressions/typeGuards/typeGuardsInProperties.ts(21,1): error TS2322: Type 'string | false' is not assignable to type 'string | number'.
  Type 'false' is not assignable to type 'string | number'.
tests/cases/conformance/expressions/typeGuards/typeGuardsInProperties.ts(25,1): error TS2322: Type 'string | false' is not assignable to type 'string | number'.
  Type 'false' is not assignable to type 'string | number'.


==== tests/cases/conformance/expressions/typeGuards/typeGuardsInProperties.ts (6 errors) ====
    // Note that type guards affect types of variables and parameters only and 
    // have no effect on members of objects such as properties. 
    
    var num: number;
    var strOrNum: string | number;
    class C1 {
        private pp1: string | number;
        pp2: string | number;
        // Inside public accessor getter
        get pp3() {
            return strOrNum;
        }
        method() {
            strOrNum = typeof this.pp1 === "string" && this.pp1; // string | number
            ~~~~~~~~
!!! error TS2322: Type 'string | false' is not assignable to type 'string | number'.
!!! error TS2322:   Type 'false' is not assignable to type 'string | number'.
            strOrNum = typeof this.pp2 === "string" && this.pp2; // string | number
            ~~~~~~~~
!!! error TS2322: Type 'string | false' is not assignable to type 'string | number'.
!!! error TS2322:   Type 'false' is not assignable to type 'string | number'.
            strOrNum = typeof this.pp3 === "string" && this.pp3; // string | number
            ~~~~~~~~
!!! error TS2322: Type 'string | false' is not assignable to type 'string | number'.
!!! error TS2322:   Type 'false' is not assignable to type 'string | number'.
        }
    }
    var c1: C1;
    strOrNum = typeof c1.pp2 === "string" && c1.pp2; // string | number
    ~~~~~~~~
!!! error TS2322: Type 'string | false' is not assignable to type 'string | number'.
!!! error TS2322:   Type 'false' is not assignable to type 'string | number'.
    strOrNum = typeof c1.pp3 === "string" && c1.pp3; // string | number
    ~~~~~~~~
!!! error TS2322: Type 'string | false' is not assignable to type 'string | number'.
!!! error TS2322:   Type 'false' is not assignable to type 'string | number'.
    var obj1: {
        x: string | number;
    };
    strOrNum = typeof obj1.x === "string" && obj1.x;  // string | number
    ~~~~~~~~
!!! error TS2322: Type 'string | false' is not assignable to type 'string | number'.
!!! error TS2322:   Type 'false' is not assignable to type 'string | number'.